# NPK

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NPK.cpp  NPKLoader.cpp  NPKLoader.hpp  NPKPacker.cpp  NPKPacker.hpp  README.md  TODO  imgui.ini  vcpkg.json
include/: RPKLoader.hpp  RPKPacker.hpp  imconfig.h  imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_stdlib.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/: RPKLoader.cpp  RPKPacker.cpp
test/test/: NPK
